<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <item android:id="@+id/action_delete_data" android:title="@string/action_delete_data" android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="100" app:showAsAction="never" />
    <item android:id="@+id/action_web_search" android:title="@string/action_web_search" android:icon="@drawable/abc_ic_search_api_mtrl_alpha"
        android:orderInCategory="101" app:showAsAction="always" />
    <item android:id="@+id/action_settings" android:title="@string/action_settings"
        android:orderInCategory="102" app:showAsAction="never" />
    <item android:id="@+id/action_uninstall" android:title="@string/action_uninstall"
        android:orderInCategory="103" app:showAsAction="never"/>
</menu>
