<?xml version="1.0" encoding="utf-8"?>
<!--Created by Aasawari on 6/3/2015-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/historyText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/history"
        android:textColor="@color/list_item_title"
        android:textSize="20dp"
        android:textStyle="bold"
        android:typeface="serif" />

    <TableLayout
        android:id="@+id/table"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:padding="10dp"
        android:typeface="serif">

        <TableRow>

            <TextView
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shape"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/date"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shape"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/steps"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:background="@drawable/border_shape"
                android:gravity="center_horizontal"
                android:padding="5dp"
                android:text="@string/calories"
                android:textSize="18sp"
                android:textStyle="bold" />
        </TableRow>
    </TableLayout>

</RelativeLayout>