<?xml version="1.0" encoding="utf-8"?>
<!--Created by Aasawari on 5/17/2015-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/stepCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:text="@string/steps_counter"
        android:textSize="34sp"
        android:typeface="serif" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/stepImage"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:background="@drawable/ic_foot_steps"
            android:padding="10dp" />

        <TextView
            android:id="@+id/totalCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_gravity="center_horizontal"
            android:layout_toEndOf="@+id/stepImage"
            android:layout_toRightOf="@+id/stepImage"
            android:padding="10dp"
            android:text="@string/step_count"
            android:textIsSelectable="true"
            android:textSize="32sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="310dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <ImageView
            android:id="@+id/calorieImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_calorie_burnt"
            android:padding="10dp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/calorieCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/calorie_count"
            android:textIsSelectable="true"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_toRightOf="@+id/calorieImage"
            android:layout_alignTop="@+id/calorieImage"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="20dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp">

        <ImageView
            android:id="@+id/milesImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_miles"
            android:padding="10dp" />

        <TextView
            android:id="@+id/milesCount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/miles"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_toEndOf="@+id/milesImage"
            android:layout_alignBottom="@+id/milesImage"
            android:layout_toRightOf="@+id/milesImage"
            android:layout_marginLeft="20dp"/>
    </RelativeLayout>

</LinearLayout>